--- a/src/styles/_previewer.scss
+++ b/src/styles/_previewer.scss
@@ -160,7 +160,8 @@
 }
 
 .preview-button {
-  color: #404040;
+  color: inherit;
+  box-shadow: none;
   border: 1px solid rgba(0, 0, 0, 0.38) !important;
   position: absolute;
   content: 'Preview';
@@ -171,7 +172,7 @@
   padding: 0.5rem;
   border-radius: 8px !important;
 
-  &:hover {
+  &:hover, &:focus {
     background-color: #404040;
     color: $note-sidebar-color;
   }
